--- a/overlay.css
+++ b/overlay.css
@@ -1,4 +1,6 @@
-#overlay {
+@media screen and (orientation:portrait) {
+	/* portrait-specific styles */
+  #overlay {
   position: fixed;
   display: show;
   height: 100%; 
@@ -6,5 +8,22 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 1;
+  pointer-events: none;
+ }   
+}
+/* landscape */
+@media screen and (orientation:landscape) {
+	/* landscape-specific styles */
+  #overlay {
+  position: fixed;
+  display: none;
+  height: 100%; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 1;
+    pointer-events: none;
+ }  
 }
