--- a/overlay.css
+++ b/overlay.css
@@ -1,20 +1,3 @@
-@media screen and (orientation:portrait) {
-	/* portrait-specific styles */
-  #overlay {
-  position: fixed;
-  display: show;
-  height: 100%; 
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 1;
-  pointer-events: none;
- }   
-}
-/* landscape */
-@media screen and (orientation:landscape) {
-	/* landscape-specific styles */
   #overlay {
   position: fixed;
   display: none;
@@ -24,6 +7,20 @@
   right: 0;
   bottom: 0;
   z-index: 1;
-    pointer-events: none;
+  pointer-events: none;
+}   
+
+@media screen and (orientation:portrait) {
+	/* portrait-specific styles */
+	#overlay {
+  display: show;
+ }  
+
+}
+/* landscape */
+@media screen and (orientation:landscape) {
+	/* landscape-specific styles */
+  #overlay {
+  display: none;
  }  
 }
