--- a/overlay.css
+++ b/overlay.css
@@ -1,4 +1,14 @@
-
+#videoBG {
+  position: fixed;
+  display: show;
+  height: 100%; 
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+  pointer-events: none;
+}    
 
 @media screen and (orientation:portrait) {
 	/* portrait-specific styles */
