--- a/overlay.css
+++ b/overlay.css
@@ -1,4 +1,12 @@
 #frameBG {
+  position: fixed;
+  display: show;
+  height: 30%;
+  width: 40%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   z-index: 0;
 }    
 
