--- a/overlay.css
+++ b/overlay.css
@@ -1,13 +1,14 @@
 #frameBG {
   position: fixed;
   display: show;
-  height: 30%;
-  width: 40%;
+  width: 100%;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 0;
+  background-color: rgba(0, 0, 0, 0.85);
 }    
 
 #videoBG {
