--- a/overlay.css
+++ b/overlay.css
@@ -9,6 +9,14 @@
   bottom: 0;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.85);
+}
+
+#intframe {
+  position: relative;
+  display: show;
+  width: 100%;
+  height: 80%;
+  top: 10%;
 }    
 
 #videoBG {
