--- a/overlay.css
+++ b/overlay.css
@@ -9,15 +9,34 @@
   bottom: 0;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.85);
+  opacity: 0.0;
+  transition:1s; 
 }
 
 #intframe {
-  position: relative;
+  position: absolute;
   display: show;
   width: 100%;
   height: 80%;
   top: 20%;
-}    
+  z-index: 0;
+}
+
+#intbtn {
+  position: absolute;
+  display: show;
+  width: 10%;
+  height: 10%;
+  top: 90%;
+  right:0%;
+  transition: 1s;
+  opacity: 1.0;
+  background-color: red;
+  z-index: 1;
+}
+#intbtn:hover {
+  opacity: 0.5;
+}  
 
 #videoBG {
   position: fixed;
