--- a/overlay.css
+++ b/overlay.css
@@ -1,25 +1,24 @@
 #frameBG {
-  position: fixed;
+  position: relative;
   display: show;
   width: 100%;
-  height: 100%;
+  height: 300px;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
   z-index: 1;
   background-color: rgba(0, 0, 0, 0.85);
-  opacity: 0.0;
+  opacity: 1.0;
   transition:1s; 
-  pointer-events: none;
+  pointer-events: auto;
 }
 
 #intframe {
   position: absolute;
   display: show;
   width: 100%;
-  height: 80%;
-  top: 20%;
+  height: 100%;
   z-index: 0;
 }
 
